hard-gists/1873692/run.log
=== Docker Run Log for 1873692 ===
Started at: Mi 29. Okt 12:32:06 CET 2025

[2025-10-29 12:32:07] START: Running container for 1873692
[2025-10-29 12:32:07] SUCCESS: Container 1eb421fa367e603192c23d6cef22cc71d647083b255c15dadc0b3bc47fb42fa0 started for 1873692
=== Container logs for 1873692 ===
  File "/snippet.py", line 50
    print "Fetching content from http://money.cnn.com/2012/02/20/news/economy/david_walker_third_party/index.htm ... "
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1873692 ===
[2025-10-29 12:32:09] INFO: Container 1eb421fa367e603192c23d6cef22cc71d647083b255c15dadc0b3bc47fb42fa0 has stopped
